--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "types": ["jest", "node"],
+    "esModuleInterop": true,
+    "typeRoots": ["node_modules/@types", "types"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
